new components added

--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -14,3 +14,22 @@ $container-max-widths: (
   xl: 1140px,
   xxl: 1440px
 ) !default;
+
+$light-orange: #F6C445;
+$orange: #ea732b;
+$dark-orange: #E16F37;
+$yellow: #FADF4B;
+$red: #C95134;
+$dark-blue: #36409F;
+$mid-blue: #497DCB;
+$light: #61BCEE;
+$grey: #2B3035;
+$light-grey: #f4f5f5;
+$white: #ffffff;
+
+$silka-bold: 'silkabold';
+$silka-regular: 'silkaregular';
+$silka-italic: 'silkaitalic';
+
+
+$animation-ease: cubic-bezier(0.42, 0, 0.58, 1);
