--- a/src/assets/scss/base/_resets.scss
+++ b/src/assets/scss/base/_resets.scss
@@ -1,4 +1,16 @@
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+
+}
+body {
+  font-size: 14px;
+  font-size: 1.4rem;
+
+  padding-top: 70px;
+}
 .container-fluid {
   max-width: 1440px;
   margin: 0 auto;
 }
+
