--- a/src/templates/partials/includes/nav.hbs
+++ b/src/templates/partials/includes/nav.hbs
@@ -1,22 +1,58 @@
-<ul>
-  <li>
-    <a href="/">
-      Home
+<nav>
+  <div class="nav__inner container-xl">
+    <a href="#" class="nav__toggle-btn">
+      <svg width="44" height="44" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="22" cy="22" r="21.78" style="fill:#2b3035;isolation:isolate;opacity:0.05"/>
+        <g>
+          <line style="fill:none;stroke:#2b3035;stroke-width:2px" x1="11.46" y1="15.43" x2="32.54" y2="15.43"/>
+          <line style="fill:none;stroke:#2b3035;stroke-width:2px" x1="11.46" y1="22" x2="26.48" y2="22"/>
+          <line style="fill:none;stroke:#2b3035;stroke-width:2px" x1="11.46" y1="28.57" x2="32.54" y2="28.57"/>
+        </g>
+      </svg>
     </a>
-  </li>
-  <li>
-    <a href="/about-us.html">
-      About Us
+    <a href="/" class="nav__home-btn">
+      <svg width="44" height="44" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="22" cy="22" r="21"/>
+        <path d="M31,20.2l-8.4-7.7c-0.3-0.3-0.6-0.4-1-0.4c-0.4,0-0.7,0.2-1,0.4L13,20.2l-0.4,0.4V32H20v-7.1h4V32h7.4V20.6	L31,20.2z M21.7,13.5C21.7,13.5,21.7,13.5,21.7,13.5C21.7,13.5,21.7,13.5,21.7,13.5z M30.1,30.6h-4.7v-5.7c0-0.4-0.1-0.7-0.4-1	s-0.6-0.4-1-0.4h-4c-0.4,0-0.7,0.1-1,0.4c-0.3,0.3-0.4,0.6-0.4,1v5.7h-4.7v-9.4l7.7-7.7c0,0,0,0,0,0l8.4,7.7V30.6z" />
+      </svg>
     </a>
-  </li>
-  <li>
-    <a href="/exclaim">
-      Exclaim
-    </a>
-  </li>
-  <li>
-    <a href="/echo/Hello">
-      Echo: Hello
-    </a>
-  </li>
-</ul>
+    <ul class="navigation">
+      <li class="active">
+        <a href="/">About us</a>
+      </li>
+      <li>
+        <a href="/">Business areas</a>
+      </li>
+      <li>
+        <a href="">Our team</a>
+      </li>
+      <li>
+        <a href="">News</a>
+      </li>
+      <li>
+        <a href="">Kinguinverse</a>
+      </li>
+      <li>
+        <a href="">Contact us</a>
+      </li>
+    </ul>
+
+    <div class="nav__mobile-wrapper">
+      <div class="nav__mobile-wrapper-header">
+        <a href="/" class="nav__home-btn">
+          <svg width="44" height="44" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="22" cy="22" r="21"/>
+            <path d="M31,20.2l-8.4-7.7c-0.3-0.3-0.6-0.4-1-0.4c-0.4,0-0.7,0.2-1,0.4L13,20.2l-0.4,0.4V32H20v-7.1h4V32h7.4V20.6	L31,20.2z M21.7,13.5C21.7,13.5,21.7,13.5,21.7,13.5C21.7,13.5,21.7,13.5,21.7,13.5z M30.1,30.6h-4.7v-5.7c0-0.4-0.1-0.7-0.4-1	s-0.6-0.4-1-0.4h-4c-0.4,0-0.7,0.1-1,0.4c-0.3,0.3-0.4,0.6-0.4,1v5.7h-4.7v-9.4l7.7-7.7c0,0,0,0,0,0l8.4,7.7V30.6z" />
+          </svg>
+        </a>
+        <a href="#" class="nav__close-btn"></a>
+      </div>
+      <div class="nav__mobile">
+
+      </div>
+      <a href="/" class="ms-auto btn btn--full btn--secondary py-3">Careers</a>
+    </div>
+
+    <a href="/" class="ms-auto btn btn--primary-inverted">Careers</a>
+  </div>
+</nav>
