--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -1,2 +1,34 @@
+@font-face {
+  font-family: 'silkaregular';
+  src: url('/assets/fonts/silka-regular-webfont.eot');
+  src: url('/assets/fonts/silka-regular-webfont.eot?#iefix') format('embedded-opentype'),
+       url('/assets/fonts/silka-regular-webfont.woff2') format('woff2'),
+       url('/assets/fonts/silka-regular-webfont.woff') format('woff'),
+       url('/assets/fonts/silka-regular-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 
+}
 
+@font-face {
+  font-family: 'silkaitalic';
+  src: url('/assets/fonts/silka-regularitalic-webfont.eot');
+  src: url('/assets/fonts/silka-regularitalic-webfont.eot?#iefix') format('embedded-opentype'),
+       url('/assets/fonts/silka-regularitalic-webfont.woff2') format('woff2'),
+       url('/assets/fonts/silka-regularitalic-webfont.woff') format('woff'),
+       url('/assets/fonts/silka-regularitalic-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+
+}
+@font-face {
+  font-family: 'silkabold';
+  src: url('/assets/fonts/silka-bold-webfont.eot');
+  src: url('/assets/fonts/silka-bold-webfont.eot?#iefix') format('embedded-opentype'),
+       url('/assets/fonts/silka-bold-webfont.woff2') format('woff2'),
+       url('/assets/fonts/silka-bold-webfont.woff') format('woff'),
+       url('/assets/fonts/silka-bold-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+
+}
