--- a/src/assets/scss/layout/_navigation.scss
+++ b/src/assets/scss/layout/_navigation.scss
@@ -1,3 +1,201 @@
-.navigation {
-	background: grey;
+nav {
+	min-height: 70px;
+	background: white;
+	display: flex;
+	position: fixed;
+	z-index: 9998;
+	width: 100%;
+	top: 0;
+	left: 0;
+
+	.nav__inner {
+		display: flex;
+	}
+
+	ul.navigation {
+		display: flex;
+		list-style: none;
+		text-decoration: none;
+		margin: 0;
+		padding: 0;
+		@include media-breakpoint-down(lg) {
+			display: none;
+		}
+		li {
+			margin-left: 3rem;
+			display: flex;
+			align-items: center;
+			position: relative;
+			&:before {
+				content: '';
+				position: absolute;
+				width: 100%;
+				height: 0;
+				bottom: 0;
+				left: 0;
+				background:  #E16F37;
+				transition: height .1s $animation-ease;
+			}
+			a {
+				font-family: 'silkaregular';
+				text-decoration: none;
+				display: flex;
+				align-items: center;
+				height: 100%;
+				cursor: pointer;
+				z-index: 1;
+			}
+			&.active, &:hover {
+				&:before {
+					height: 5px;
+				}
+				a {
+					font-family: 'silkabold';
+				}
+			}
+		}
+	}
+
+	.btn {
+		align-self: center;
+		padding: 0.6rem 5rem;
+	}
+
+	.nav__home-btn {
+		display: flex;
+		align-items: center;
+		svg {
+			cursor: pointer;
+			circle {
+				fill: #ffffff;
+				stroke: #E16F37;
+				stroke-width: 1.5;
+			}
+			path {
+				fill: #E16F37;
+			}
+			@include media-breakpoint-up(lg) {
+				circle, path {
+					transition: all .15s cubic-bezier(0.455, 0.03, 0.515, 0.955)	;
+				}
+				&:hover {
+					circle {
+						fill: #E16F37;
+					}
+					path {
+						fill: #ffffff;
+					}
+				}
+			}
+
+		}
+		@include media-breakpoint-down(lg) {
+			svg {
+				circle {
+					fill:#2b3035;
+					isolation:isolate;
+					opacity:.05;
+				}
+				path {
+					fill: $grey;
+				}
+			}
+		}
+
+		&.active {
+			svg {
+				circle {
+					fill: #E16F37;
+				}
+				path {
+					fill: #ffffff;
+				}
+			}
+		}
+	}
+
+	.nav__toggle-btn {
+		display: flex;
+		align-items: center;
+		@include media-breakpoint-up(lg) {
+			display: none !important;
+		}
+	}
+
+	.nav__close-btn {
+		height: 43px;
+		width: 43px;
+		position: relative;
+		&:before, &:after {
+			position: absolute;
+			left: 21px;
+			top: 3px;
+			content: ' ';
+			height: 35px;
+			width: 2px;
+			background-color: $white;
+		}
+		&:before {
+			transform: rotate(45deg);
+		}
+		&:after {
+			transform: rotate(-45deg);
+		}
+	}
+
+	.nav__mobile-wrapper {
+		transition: all .3s $animation-ease;
+		display: none;
+		@include media-breakpoint-down(lg) {
+			position: fixed;
+			top: 0;
+			left: 0;
+			height: 100%;
+			width: 100%;
+			padding: 3rem;
+			z-index: 9999;
+			background: $dark-orange;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			transform: translateY(-100%);
+			opacity: 0;
+			&.is-open {
+				transform: translateY(0);
+				opacity: 1;
+			}
+
+			.nav__mobile-wrapper-header {
+				display: flex;
+				justify-content: space-between;
+			}
+
+			.nav__home-btn {
+				svg {
+					circle {
+						fill: $red;
+						stroke: $red;
+						opacity: 1;
+					}
+					path {
+						fill: $white;
+					}
+				}
+			}
+
+			ul {
+			flex-direction: column;
+				li {
+					a {
+						display: block;
+						text-align: center;
+						font-size: 2.4rem;
+						color: $white;
+						width: 100%;
+					}
+					margin: 0 0 2rem 0;
+				}
+			}
+		}
+	}
 }
