--- a/src/templates/partials/layouts/main.hbs
+++ b/src/templates/partials/layouts/main.hbs
@@ -8,27 +8,28 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
-
     <link href="/assets/css/page.css" rel="stylesheet" />
   </head>
+
   <body>
-    <main class="container-xxl p-0">
+      {{> includes/nav }}
       <header>
         <div class="content align-middle">
           {{> includes/header }}
         </div>
       </header>
 
+      <main class="container-xxl p-0">
       {{#>page-content}}
 
       {{/page-content}}
+      </main>
 
       <footer>
         <div class="content">
           {{> includes/footer }}
         </div>
       </footer>
-    </main>
 
     <script src="/assets/js/vendor.min.js"></script>
     <script src="/assets/js/main.min.js"></script>
